# data-diff-viewer

./: .bumpversion.cfg  .gitignore  README.md  RELEASE.md  pyproject.toml  ruff.toml
.github/workflows/: build_and_validate.yml  release.yml
data_diff_viewer/: __init__.py  diff_summary.py  package.py  utils.py
javascript/data-diff-viewer/: README.md  package-lock.json  package.json
javascript/data-diff-viewer/config/: webpack.config.js
javascript/data-diff-viewer/config/jest/: babelTransform.js
javascript/data-diff-viewer/public/: index.html
javascript/data-diff-viewer/src/: db_base64.js  duckdb_wasm_base64.js  index.css  index.js  interactions.js  load_report.js  react_components.js  report_loader.js
