[tool.poetry]
name = "data-diff-viewer"
version = "0.1.0"
description = "Generate HTML reports to visualize the results of data-diff with bigquery-frame and spark-frame."
authors = ["Furcy Pin <pin.furcy@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/FurcyPin/data-diff-viewer"
repository = "https://github.com/FurcyPin/data-diff-viewer"
include = ["data_diff_viewer/templates/*"]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
duckdb = "^0.9.2"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^0.971"
types-setuptools = "^65.6.0.3"
safety = "^2.1.1"

pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.coverage.run]
branch = true
omit = ["tests/*"]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[report]
exclude_also = [
    "if TYPE_CHECKING:"
]


[tool.mypy]
# --strict
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
implicit_reexport = true
strict_equality = true
# These checks don't pass yet
disallow_any_generics = false
warn_return_any = false
# --strict end
exclude = ['tests']


[tool.pytest.ini_options]
addopts = [
    "-ra",
    "--cov=data_diff_viewer",
    "--doctest-modules"
]
testpaths = [
    "data_diff_viewer"
]
