[tool.poetry]
name = "data-diff-viewer"
version = "0.3.2"
description = "Generate HTML reports to visualize the results of data-diff with bigquery-frame and spark-frame."
authors = ["Furcy Pin <pin.furcy@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/FurcyPin/data-diff-viewer"
repository = "https://github.com/FurcyPin/data-diff-viewer"
include = [
    "data_diff_viewer/templates/*",
    "data_diff_viewer/py.typed",
]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.13"
duckdb = "~0.10.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.1.6"
mypy = "^0.971"
types-setuptools = "^65.6.0.3"
safety = "^2.1.1"

pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.coverage.run]
branch = true
omit = ["tests/*"]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[report]
exclude_also = [
    "if TYPE_CHECKING:"
]


[tool.mypy]
# --strict
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
implicit_reexport = true
strict_equality = true
# These checks don't pass yet
disallow_any_generics = false
warn_return_any = false
# --strict end
exclude = ['tests']


[tool.pytest.ini_options]
addopts = [
    "-ra",
    "--cov=data_diff_viewer",
    "--doctest-modules"
]
testpaths = [
    "data_diff_viewer"
]

[tool.bumpversion]
current_version = "0.3.2"
commit = true
message = "Bump version: {current_version} → {new_version}"
tag = true
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\.(?P<release>[a-z]+)(?P<dev>\\d+))?"
serialize = ["{major}.{minor}.{patch}"]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "data_diff_viewer/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "javascript/data-diff-viewer/package.json"
search = "\"version\": \"{current_version}\","
replace = "\"version\": \"{new_version}\","
